--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -45,6 +45,7 @@ body {
   background: $body-bg-color;
   color: #fff;
   line-height: 1.5;
+  min-height: 100%;
 }
 
 ul {
@@ -72,7 +73,6 @@ button {
   background: transparent;
   cursor: pointer;
   font-size: 1rem;
-  text-transform: uppercase;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 0.3em;
   text-align: center;
@@ -88,3 +88,4 @@ button:hover {
 @import 'header';
 @import 'texts';
 @import 'social';
+@import 'skills';
