make adjustment to texts

--- a/src/scss/_skills.scss
+++ b/src/scss/_skills.scss
@@ -16,5 +16,19 @@
       margin-top: 0.2em;
       margin-bottom: 0.5em;
     }
+
+    ul {
+      display: flex;
+      width: 100%;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
+    li {
+      word-wrap: break-word;
+      flex: 30%;
+      padding: 4px;
+      text-align: center;
+    }
   }
 }
