--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -65,6 +65,7 @@ ul {
 
 button {
   display: inline-block;
+  border-radius: 4px;
   border: none;
   padding: 0.75rem 1rem;
   margin: 0;
@@ -80,8 +81,25 @@ button {
 }
 
 button:hover {
-  color: $primary-color;
+  color: white;
   background: $button-color;
+}
+
+// logo
+.logo-box {
+  width: 50;
+  height: 50;
+  text-align: center;
+
+}
+
+#logo {
+  line-height: 50px;
+  vertical-align: middle;
+  fill: white;
+  stroke:white;
+  stroke-miterlimit: 10;
+  /* animation: fill 0.5s linear 1s forwards; */
 }
 
 @import 'grid';
