--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -84,12 +84,14 @@
   [class*="col-lg-"] {
     float: left;
     padding: 15px;
+    min-height: 100%;
   }
 }
 
 
 .row {
   width: 100%;
+  min-height: 100%;
   padding: 1em;
   @media only screen and (max-width: 768px) {
     padding: 0em;
@@ -105,7 +107,6 @@
 .contents {
   width: 100%;
   min-height: 100%;
-  // padding: 1em;
   z-index: -1;
 
   @media only screen and (max-width: 768px) {
